[package]
name = "remind4f"
version = "0.1.0"
edition = "2021"

[dependencies]
simplelog = "0.12.2"
toml = "0.8"
chrono = "0.4"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.10", features = ["full"] }
serenity = "0.12"
